--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+.search-form{
+  display: flex;
+  column-gap: 0.5rem;
+}
+
+.search-form input {
+  width: 300px;
+}
+
+@media screen and (max-width: 768px) {
+  .search-form{
+    display: flex;
+    flex-direction: column;
+  }
+  .search-form input {
+    width: auto;
+  }
+}
